--- a/pom.xml
+++ b/pom.xml
@@ -171,10 +171,20 @@
             <version>${lucene.version}</version>
         </dependency>
         <dependency>
-            <groupId>qube.qoan</groupId>
+            <groupId>qube.qai</groupId>
             <artifactId>qai</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>qube.qoan</groupId>-->
+            <!--<artifactId>qai</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>qube.qai</groupId>-->
+            <!--<artifactId>qai</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
 
     </dependencies>
 
@@ -272,36 +282,36 @@
 			<plugins>
 				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
 				<!-- TODO Remove when http://dev.vaadin.com/ticket/14924 is resolved -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>com.vaadin</groupId>
-										<artifactId>
-											vaadin-maven-plugin
-										</artifactId>
-										<versionRange>[7.1.11,)</versionRange>
-										<goals>
-											<goal>resources</goal>
-											<goal>update-widgetset</goal>
-											<goal>compile</goal>
-											<goal>compile-theme</goal>
-											<goal>update-theme</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
+				<!--<plugin>-->
+					<!--<groupId>org.eclipse.m2e</groupId>-->
+					<!--<artifactId>lifecycle-mapping</artifactId>-->
+					<!--<version>1.0.0</version>-->
+					<!--<configuration>-->
+						<!--<lifecycleMappingMetadata>-->
+							<!--<pluginExecutions>-->
+								<!--<pluginExecution>-->
+									<!--<pluginExecutionFilter>-->
+										<!--<groupId>com.vaadin</groupId>-->
+										<!--<artifactId>-->
+											<!--vaadin-maven-plugin-->
+										<!--</artifactId>-->
+										<!--<versionRange>[7.1.11,)</versionRange>-->
+										<!--<goals>-->
+											<!--<goal>resources</goal>-->
+											<!--<goal>update-widgetset</goal>-->
+											<!--<goal>compile</goal>-->
+											<!--<goal>compile-theme</goal>-->
+											<!--<goal>update-theme</goal>-->
+										<!--</goals>-->
+									<!--</pluginExecutionFilter>-->
+									<!--<action>-->
+										<!--<ignore></ignore>-->
+									<!--</action>-->
+								<!--</pluginExecution>-->
+							<!--</pluginExecutions>-->
+						<!--</lifecycleMappingMetadata>-->
+					<!--</configuration>-->
+				<!--</plugin>-->
 			</plugins>
 		</pluginManagement>
 
