--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,13 @@
             <!--<version>1.0-SNAPSHOT</version>-->
         <!--</dependency>-->
 
+        <!-- jUnit for the tests -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 	<build>
