--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<project.encoding>UTF-8</project.encoding>
         <jetty9.version>9.2.6.v20141205</jetty9.version>
         <guice.version>4.0</guice.version>
-
+        <hazelcast.version>3.6-EA2</hazelcast.version>
         <!-- @TODO not so sure about those two -->
         <lucene.version>5.3.1</lucene.version>
         <tika.version>1.10</tika.version>
@@ -144,6 +144,12 @@
             <version>${guice.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.inject.extensions</groupId>
+            <artifactId>guice-servlet</artifactId>
+            <version>${guice.version}</version>
+        </dependency>
+
         <!-- lucene & tika -->
         <!-- tika does parsing and lucene does search and indexing -->
         <dependency>
@@ -174,6 +180,13 @@
             <groupId>qube.qai</groupId>
             <artifactId>qai</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!-- Hazelcast for distributed computing -->
+        <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>hazelcast</artifactId>
+            <version>${hazelcast.version}</version>
         </dependency>
         <!--<dependency>-->
             <!--<groupId>qube.qoan</groupId>-->
