--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,12 @@
             <version>1.7.13</version>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>slf4j-log4j12</artifactId>-->
+            <!--<version>1.7.13</version>-->
+        <!--</dependency>-->
+
         <!-- jUnit for the tests -->
         <dependency>
             <groupId>junit</groupId>
