--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.encog</groupId>
+            <artifactId>encog-core</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
 		<!-- Vaadin and etc. -->
 		<dependency>
 			<groupId>com.vaadin</groupId>
