some setting and things
nothing significant really... and by the way, vaadin broke again and won't work. would reverting the whole project  help, you think?

--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.vaadin.addons</groupId>
+            <artifactId>loginform</artifactId>
+            <version>0.6.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>xml-apis</groupId>
             <artifactId>xml-apis</artifactId>
             <version>1.4.01</version>
