--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,12 @@
             <version>${lucene.version}</version>
         </dependency>
 
+        <!-- jSoup for html-parsing -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.8.3</version>
+        </dependency>
 
         <!-- Hazelcast for distributed computing -->
         <dependency>
