--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,12 @@
             <version>1.7.13</version>
         </dependency>
 
+        <!-- apache commons tarball compression is what we need -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.10</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>org.slf4j</groupId>-->
             <!--<artifactId>slf4j-log4j12</artifactId>-->
