now we can find the wiki-resource with speed
implemented indexing to resource directories in order to make searches more efficient.

--- a/pom.xml
+++ b/pom.xml
@@ -310,7 +310,7 @@
 				<configuration>
 					<filesets>
 						<fileset>
-							<directory>src/main/webapp/VAADIN/themes</directory>
+							<indexDirectory>src/main/webapp/VAADIN/themes</indexDirectory>
 							<includes>
 								<include>**/styles.css</include>
 								<include>**/styles.scss.cache</include>
