--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,12 @@
 			<groupId>org.vaadin.addon</groupId>
 			<artifactId>jfreechartwrapper</artifactId>
 			<version>3.0.2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax-servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+            </exclusions>
 		</dependency>
 
         <!-- Visjs Vaadin adapter for network rendering -->
@@ -220,6 +226,13 @@
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-queryparser</artifactId>
             <version>${lucene.version}</version>
+        </dependency>
+
+        <!-- apache open-nlp -->
+        <dependency>
+            <groupId>org.apache.opennlp</groupId>
+            <artifactId>opennlp-tools</artifactId>
+            <version>1.6.0</version>
         </dependency>
 
         <!-- jSoup for html-parsing -->
