new view for wiki
which is basically for integrating the external web-service hosting the wiki

--- a/src/main/resources/qube/qoan/services/config_dev.properties
+++ b/src/main/resources/qube/qoan/services/config_dev.properties
@@ -6,3 +6,6 @@ WIKTIONARY_ARCHIVE = "/media/rainbird/ALEPH/wiki-archives/wiktionary_en.zip"
 WIKTIONARY_DIRECTORY = "/media/rainbird/ALEPH/wiki-archives/wiktionary_en.index"
 WIKTIONARY_RESOURCE_DIRECTORY = "/media/rainbird/ALEPH/wiki-archives/wiktionary_en.resources"
 WIKTIONARY_RESOURCE_INDEX = "/media/rainbird/ALEPH/wiki-archives/wiktionary_en.resources.index"
+
+# in deploymnet mode zenpunk (192.168.1.6) is the server
+QAI_NODE_TO_CONNECT = 192.168.1.6:5701
