--- a/pom.xml
+++ b/pom.xml
@@ -37,20 +37,20 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-        <!--<repository>-->
-            <!--<id>central</id>-->
-            <!--<url>http://192.168.1.4:8081/artifactory/libs-release</url>-->
-            <!--<snapshots>-->
-                <!--<enabled>false</enabled>-->
-            <!--</snapshots>-->
-        <!--</repository>-->
-        <!--<repository>-->
-            <!--<id>snapshots</id>-->
-            <!--<url>http://192.168.1.4:8081/artifactory/libs-snapshot</url>-->
-            <!--<releases>-->
-                <!--<enabled>false</enabled>-->
-            <!--</releases>-->
-        <!--</repository>-->
+        <repository>
+            <id>central</id>
+            <url>http://192.168.1.4:8081/artifactory/libs-release</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>snapshots</id>
+            <url>http://192.168.1.4:8081/artifactory/libs-snapshot</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
     </repositories>
 
 	<dependencyManagement>
