--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <name>qube.qoan</name>
 
 	<properties>
-		<vaadin.version>7.5.8</vaadin.version>
+		<vaadin.version>7.6.5</vaadin.version>
 		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
 		<project.encoding>UTF-8</project.encoding>
         <jetty9.version>9.2.6.v20141205</jetty9.version>
@@ -128,7 +128,7 @@
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-client-compiler</artifactId>
             <version>${vaadin.version}</version>
-			<scope>provided</scope>
+			<!--<scope>provided</scope>-->
 		</dependency>
 
         <dependency>
