--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,9 @@
     <name>qube.qoan</name>
 
 	<properties>
-		<vaadin.version>7.6.5</vaadin.version>
-		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
+		<!--<vaadin.version>7.6.5</vaadin.version>-->
+        <vaadin.version>7.7.1</vaadin.version>
+        <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
 		<project.encoding>UTF-8</project.encoding>
         <jetty9.version>9.2.6.v20141205</jetty9.version>
 
@@ -162,6 +163,21 @@
 			<artifactId>jetty-jmx</artifactId>
 			<version>${jetty9.version}</version>
 		</dependency>
+        <!--<dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-io</artifactId>
+            <version>${jetty9.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-client</artifactId>
+            <version>${jetty9.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-jsp</artifactId>
+            <version>${jetty9.version}</version>
+        </dependency>-->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
@@ -233,6 +249,31 @@
             <artifactId>hazelcast</artifactId>
             <version>${hazelcast.version}</version>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.eclipse.rdf4j</groupId>-->
+            <!--<artifactId>rdf4j-runtime</artifactId>-->
+            <!--<version>2.0M2</version>-->
+        <!--</dependency>-->
+
+        <!-- nano-sparql etc. -->
+        <dependency>
+            <groupId>com.blazegraph</groupId>
+            <artifactId>bigdata-jar</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.openrdf.sesame</groupId>-->
+            <!--<artifactId>sesame-rio-api</artifactId>-->
+            <!--<version>4.1.2</version>-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>org.openrdf.sesame</groupId>-->
+            <!--<artifactId>sesame-model</artifactId>-->
+            <!--<version>4.1.2</version>-->
+        <!--</dependency>-->
 
         <!-- slf4j -->
         <dependency>
@@ -358,7 +399,7 @@
         </repository>
         <repository>
             <id>vaadin-snapshots</id>
-            <url>https://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
+            <url>https://oss.sonatype.org/content/repositories/vaadin-releases/</url>
             <releases>
                 <enabled>false</enabled>
             </releases>
@@ -366,20 +407,20 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-        <repository>
-            <id>central</id>
-            <url>http://192.168.1.4:8081/artifactory/libs-release</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>snapshots</id>
-            <url>http://192.168.1.4:8081/artifactory/libs-snapshot</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-        </repository>
+        <!--<repository>-->
+            <!--<id>central</id>-->
+            <!--<url>http://192.168.1.4:8081/artifactory/libs-release</url>-->
+            <!--<snapshots>-->
+                <!--<enabled>false</enabled>-->
+            <!--</snapshots>-->
+        <!--</repository>-->
+        <!--<repository>-->
+            <!--<id>snapshots</id>-->
+            <!--<url>http://192.168.1.4:8081/artifactory/libs-snapshot</url>-->
+            <!--<releases>-->
+                <!--<enabled>false</enabled>-->
+            <!--</releases>-->
+        <!--</repository>-->
     </repositories>
 
     <dependencyManagement>
