--- a/src/main/resources/qube/qoan/services/config_dev.properties
+++ b/src/main/resources/qube/qoan/services/config_dev.properties
@@ -1,2 +1,3 @@
 # in deploymnet mode zenpunk (192.168.1.6) is the server
-QAI_NODE_TO_CONNECT=192.168.1.6:5701
+#QAI_NODE_TO_CONNECT=192.168.1.6:5701
+QAI_NODE_TO_CONNECT=127.0.0.1:5701
