persistence developments and features...
intermediate state, there will be many classes removed and so on.

--- a/pom.xml
+++ b/pom.xml
@@ -281,11 +281,11 @@
         <!--</dependency>-->
 
         <!-- slf4j -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-jdk14</artifactId>
-            <version>1.7.13</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>slf4j-jdk14</artifactId>-->
+            <!--<version>1.7.13</version>-->
+        <!--</dependency>-->
 
         <!-- apache commons tarball compression is what we need -->
         <dependency>
